# hobel-iaqdb

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  docker-compose.yml
.github/ISSUE_TEMPLATE/: performance.md
.github/workflows/: deploy-pages.yml  deploy.yml  publish-api-container-dev.yml  publish-api-container.yml  publish-ui-container-dev.yml  publish-ui-container.yml
backend/: Dockerfile  Makefile  README.md  pyproject.toml
backend/api/: auth.py  config.py  db.py  main.py
backend/api/data/: Dictionary_data.xlsx  Metadata_entry_form.xlsx  Metadata_entry_form_v2.1.xlsm  Metadata_entry_form_v3.1.xlsm  Metadata_entry_form_v3.2.1.xlsm  koppen_geiger_1991_2020_0p00833333.tif  koppen_geiger_1991_2020_0p1.tif
backend/api/models/: __init__.py  catalog.py  geo.py  study.py
backend/api/services/: building.py  contribution.py  dataset.py  geo.py  instrument.py  s3.py  space.py  study.py  study_draft.py  study_parser.py
backend/api/utils/: colors.py  file_nodes.py  files.py  mimetype.py  query.py
backend/api/views/: auth.py  catalog.py  contribute.py  files.py  map.py  seed.py  stats.py  study.py
backend/migrations/: env.py
backend/migrations/versions/: 2025_03_20_1557-1edb7ed84236_various_updates.py  2025_05_19_1551-54689698d524_new_fields.py  2025_05_28_0811-af3241850881_certification.py  2025_05_30_0853-66d1517e517f_json.py  2025_07_17_1519-7cb4d4b01470_contribution.py  21b73f221ce8_study_schema.py  7b0ba8104864_study_schema2.py  7c4f7731da01_init.py
frontend/: .eslintrc-auto-import.json  Dockerfile  README.md  index.html  package-lock.json  package.json  quasar.config.js  quasar.config.ts
frontend/public/: Dictionary_data_v2_20250704.xlsx  Dictionary_metadata_v2_20250710.xlsx  buildings.md  climate-zones.md  env.js  style.json
frontend/src/: auto-imports.d.ts  models.ts
frontend/src/assets/: acknowledgements.md  contact.md  contribute.md  how-to-cite.md  introduction.md  links.json  step-buildings.md  step-datasets.md  step-instruments.md  step-study.md
frontend/src/boot/: api.ts  i18n.ts  settings.ts
frontend/src/components/: AppHeader.vue  AppToolbar.vue  BuildingList.vue  ConfirmDialog.vue  EssentialLink.vue  FieldsList.vue  HelpDrawer.vue  LayersDrawer.vue  MaplibreMap.vue  models.ts  (+6 more)
(+69 files in other folders)
