[tool.poetry]
name = "iaqdb-api"
version = "0.1.0"
description = ""
authors = ["ymarcon <yannick.marcon@epfl.ch>"]
readme = "README.md"
packages = [{include = "api"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.4"
faker = "^26.0.0"
rasterio = "^1.3.10"
pyproj = "^3.6.1"
requests = "^2.32.3"
sqlmodel = "^0.0.22"
alembic = "^1.13.2"
asyncpg = "^0.29.0"
psycopg2 = "^2.9.9"
pydantic-settings = "^2.4.0"
dynaconf = "^3.2.6"
pillow = "^11.0.0"
timezonefinder = "^6.5.2"
pandas = "^2.2.2"
openpyxl = "^3.1.5"
country-converter = "^1.2"
python-multipart = "^0.0.17"
uvicorn = "^0.32.0"
enacit4r-auth = {git = "https://github.com/EPFL-ENAC/enacit4r-auth", rev = "0.4.3"}
enacit4r-files = {git = "https://github.com/EPFL-ENAC/enacit4r-files", rev = "0.4.0"}
enacit4r-sql = {git = "https://github.com/EPFL-ENAC/enacit4r-sql", rev = "0.1.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
